bookmark in bookmarks toolbar flickers instead of showing the tooltip if you hover on the bottom of the bookmark
Categories
(Firefox :: Bookmarks & History, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox88 | --- | disabled |
| firefox89 | --- | wontfix |
| firefox90 | --- | verified |
People
(Reporter: soeren.hentzschel, Assigned: enndeakin)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [proton-tooltips])
Attachments
(2 files)
STR:
- Make sure that the following preferences are enabled:
browser.proton.tabs.enabled
browser.proton.places-tooltip.enabled
All other Proton options can bei either enabled or disabled. I don't know why the tabs setting affects the bookmarks toolbar but it only happens with the tabs setting enabled.
- Enable the bookmarks toolbar and make sure that you have at least one bookmark in your bookmarks toolbar.
- Move your mouse over a bookmark in the bookmarks toolbar, try it at the bottom of the bookmark and other positions.
Expected:
The tooltip appears, no matter where you move the mouse.
Actual:
The tooltip does not appear of you move the move on the bottom of the bookmark. Instead the bookmark flickers.
Comment 1•4 years ago
|
||
I suspect this has the same root cause as bug 1692084 and bug 1695383 - the tooltip has a shadow (I guess?) and this is causing the tooltip to appear, then the original element is no longer hovered so it disappears, then the element is hovered again so it reappears, etc.
I was under the impression we were moving tooltips to their own pref - Jared, is that right?
| Reporter | ||
Comment 2•4 years ago
•
|
||
I was under the impression we were moving tooltips to their own pref - Jared, is that right?
Sorry, I made a copy & paste error (it's already late) and wrote browser.proton.toolbar.enabled instead of browser.proton.places-tooltip.enabled. I corrected the report.
Comment 3•4 years ago
|
||
Yes, they are in their own pref, browser.proton.places-tooltip.enabled.
Updated•4 years ago
|
Updated•4 years ago
|
Comment 4•4 years ago
|
||
:soeren.hentzschel, since this bug is a regression, could you fill (if possible) the regressed_by field?
For more information, please visit auto_nag documentation.
Updated•4 years ago
|
| Reporter | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 5•4 years ago
|
||
Mozregression result:
2021-05-09T23:57:02.459000: DEBUG : Found commit message:
Bug 1665390 - Style bookmarks toolbar and tabs toolbar tooltips. r=NeilDeakin,ntim
Differential Revision: https://phabricator.services.mozilla.com/D104257
2021-05-09T23:57:02.460000: DEBUG : Did not find a branch, checking all integration branches
2021-05-09T23:57:02.462000: INFO : The bisection is done.
2021-05-09T23:57:02.463000: INFO : Stopped
Investigated on Windows 10.
Updated•4 years ago
|
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 6•4 years ago
|
||
Comment 8•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Comment 9•4 years ago
|
||
Hello,
I’ve managed to reproduce this issue using Firefox 88.0a1 (2021-03-11) on Ubuntu 20.04x64 by following the STR from comment 0.
This is verified fixed using Firefox 90.0b4 on the following OSes: Windows 10x64, Ubuntu 20.04x64 and macOS 10.13.
Description
•