Bug 1697916, don't hide tooltips if the mouseout event moves onto the tooltip to prevent the tooltip from closing when it appears aligned on a bookmark or tab, r=jaws

Differential Revision: https://phabricator.services.mozilla.com/D116056